--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
+    "uuid": "^8.3.2",
     "validation": "^0.0.1"
   },
   "devDependencies": {
