--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,6 @@ jobs:
       
       - name: Prettier Action
         uses: creyD/prettier_action@v4.2
+        with:
+          prettier_options: --write **/*.{js,md}
+          only_changed: True
