--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "validation": "^0.0.1"
   },
   "engines": {
-    "node": "16.14.2"
+    "node": "16.x"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
