--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
   "scripts": {
     "start": "node server.js",
     "app": "nodemon server.js",
-    "test": "jest ./tests/api.test.js --runInBand  --forceExit",
+    "test": "jest ./routes/article.test.js --runInBand  --forceExit",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jest": "^28.1.0",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
+    "supertest": "^6.2.3",
     "uuid": "^8.3.2",
     "validation": "^0.0.1"
   },
